--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
+    "@types/react-typing-effect": "^2.0.3",
+    "axios": "^1.2.2",
+    "daisyui": "^2.46.1",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.1",
+    "react-typing-effect": "^2.0.5",
+    "theme-change": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
