--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "daisyui": "^2.46.1",
     "next": "latest",
     "react": "18.2.0",
+    "react-awesome-reveal": "^4.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
